force-app/main/default/objects/Ops_Workflow_Templates__c/Ops_Workflow_Templates__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Setting holding procurement templates and their mapping to stages and stage duration</description>
    <label>Ops Workflow Templates</label>
</CustomObject>