force-app/main/default/objects/Ops_Workflow_Templates__c/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <description>Keeps record type developer name for which this template applies to.</description>
    <label>Record Type Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>