force-app/main/default/objects/Ops_Workflow_Templates__c/fields/Stage_Duration__c.field-meta.xml
<CustomField>
    <fullName>Stage_Duration__c</fullName>
    <label>Stage Duration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>