force-app/main/default/objects/Ops_Workflow_Templates__c/fields/Stage_Id__c.field-meta.xml
<CustomField>
    <fullName>Stage_Id__c</fullName>
    <label>Stage Id</label>
    <length>3</length>
    <type>Text</type>
</CustomField>