force-app/main/default/objects/Ops_Workflow_Templates__c/fields/Start_SLA1__c.field-meta.xml
<CustomField>
    <fullName>Start_SLA1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start SLA1</label>
    <type>Checkbox</type>
</CustomField>