force-app/main/default/objects/Ops_Workflow_Templates__c/listViews/Values.listView-meta.xml
<ListView>
    <fullName>Values</fullName>
    <columns>NAME</columns>
    <columns>Template_Name__c</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>Stage_Id__c</columns>
    <columns>Stage_Duration__c</columns>
    <columns>Seq__c</columns>
    <columns>Start_SLA1__c</columns>
    <columns>End_SLA1__c</columns>
    <columns>Start_SLA2__c</columns>
    <columns>End_SLA2__c</columns>
    <filterScope>Everything</filterScope>
    <label>Values</label>
</ListView>